--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -44,6 +44,9 @@
     line-height: 1;
     margin: 0;
     padding: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .profile__info-paragraph {
@@ -53,8 +56,10 @@
     padding: 0;
     font-size: 18px;
     line-height: 1;
-
     font-weight: 400;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .profile__info-edit-button {
